// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Harness File Store with HelmChart Manifest tests initial rendering 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main optionsViewContainer"
    style="height: inherit;"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--margin-bottom-medium"
    >
      Manifest details
    </p>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
      >
        <div
          class="Layout--vertical StyledProps--main manifestForm StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-flex-start"
        >
          <div
            class="manifestStepWidth"
          >
            <div
              class="halfWidth"
            >
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="identifier"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="helmHarnessFileStore_identifier"
                  >
                    pipeline.manifestType.manifestIdentifier
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="identifier"
                      placeholder="pipeline.manifestType.manifestPlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="halfWidth"
            >
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="helmVersion"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="helmHarnessFileStore_helmVersion"
                  >
                    helmVersion
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="helmVersion"
                          placeholder="- Select -"
                          style="padding-right: 0px;"
                          type="text"
                          value="Version 2"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                            icon="chevron-down"
                          >
                            <svg
                              data-icon="chevron-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                chevron-down
                              </desc>
                              <path
                                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="halfWidth"
            >
              <div
                class="group"
                data-rbd-droppable-context-id="0"
                data-rbd-droppable-id="droppableSelect"
              >
                <div
                  class="bp3-form-group"
                  style="flex-grow: 1; margin-bottom: 0px;"
                >
                  <label
                    class="bp3-label"
                    for="files"
                  >
                    <div
                      class="formLabel"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="helmHarnessFileStore_files"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          fileFolderPathText
                        </p>
                      </span>
                      <div
                        class="bp3-popover-wrapper typeSelectorWrapper"
                      >
                        <div
                          class="bp3-popover-target typeSelector"
                        >
                          <button
                            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <span
                                class="bp3-icon StyledProps--main icon fixed"
                                data-icon="fixed-input"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="listFieldsWrapper"
                    >
                      <div
                        aria-describedby="rbd-hidden-text-0-hidden-text-0"
                        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between StyledProps--flex-alignItems-center StyledProps--margin-top-small"
                        data-rbd-drag-handle-context-id="0"
                        data-rbd-drag-handle-draggable-id="0"
                        data-rbd-draggable-context-id="0"
                        data-rbd-draggable-id="0"
                        draggable="false"
                        role="button"
                        tabindex="0"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                          style="align-items: center;"
                        >
                          <span
                            class="bp3-icon bp3-icon-drag-handle-vertical StyledProps--main"
                            icon="drag-handle-vertical"
                          >
                            <svg
                              data-icon="drag-handle-vertical"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                drag-handle-vertical
                              </desc>
                              <path
                                d="M6 9c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4-6c.55 0 1-.45 1-1s-.45-1-1-1-1 .45-1 1 .45 1 1 1zM6 13c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main text"
                          >
                            1.
                          </p>
                          <div
                            class="multiSelectField"
                          >
                            <div
                              class="group"
                            >
                              <div
                                class="bp3-form-group"
                                style="flex-grow: 1; margin-bottom: 0px; margin-top: 0px;"
                              >
                                <label
                                  class="bp3-label"
                                >
                                  <div
                                    class="StyledProps--font StyledProps--main StyledProps--flex"
                                  >
                                    <span
                                      class="Tooltip--acenter"
                                      data-tooltip-id="helmHarnessFileStore_files[0]"
                                    >
                                      
                                    </span>
                                  </div>
                                   
                                  <span
                                    class="bp3-text-muted"
                                  />
                                </label>
                                <div
                                  class="bp3-form-content"
                                >
                                  <div
                                    class="StyledProps--font StyledProps--main selectFieldContainer StyledProps--flex"
                                  >
                                    <div
                                      class="fieldWrapper"
                                    >
                                      <div
                                        class="bp3-form-group"
                                        style="width: 100%;"
                                      >
                                        <div
                                          class="bp3-form-content"
                                        >
                                          <div
                                            class="Layout--vertical StyledProps--main"
                                          >
                                            <div
                                              class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                                            >
                                              <p
                                                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-left-xsmall"
                                              >
                                                - 
                                                select
                                                 -
                                              </p>
                                              <div
                                                class="StyledProps--font StyledProps--main StyledProps--padding-right-small"
                                              >
                                                <span
                                                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--margin-right-small StyledProps--margin-left-small"
                                                  icon="chevron-down"
                                                >
                                                  <svg
                                                    data-icon="chevron-down"
                                                    height="16"
                                                    viewBox="0 0 16 16"
                                                    width="16"
                                                  >
                                                    <desc>
                                                      chevron-down
                                                    </desc>
                                                    <path
                                                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                                      fill-rule="evenodd"
                                                    />
                                                  </svg>
                                                </span>
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      class="bp3-popover-wrapper typeSelectorWrapper"
                                    >
                                      <div
                                        class="bp3-popover-target typeSelector"
                                      >
                                        <button
                                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                                          type="button"
                                        >
                                          <span
                                            class="bp3-button-text"
                                          >
                                            <span
                                              class="bp3-icon StyledProps--main icon fixed"
                                              data-icon="fixed-input"
                                            >
                                              <svg
                                                height="12"
                                                viewBox="0 0 9 9"
                                                width="12"
                                                xmlns="http://www.w3.org/2000/svg"
                                              >
                                                <path
                                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                                  fill="currentColor"
                                                />
                                              </svg>
                                            </span>
                                          </span>
                                        </button>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <button
                                class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                                data-testid="remove-files-[0]"
                                disabled=""
                                tabindex="-1"
                                type="button"
                              >
                                <span
                                  class="bp3-icon StyledProps--main"
                                  data-icon="main-trash"
                                >
                                  <svg
                                    height="20"
                                    viewBox="0 0 16 20"
                                    width="20"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      clip-rule="evenodd"
                                      d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                                      fill="currentColor"
                                      fill-rule="evenodd"
                                    />
                                    <path
                                      clip-rule="evenodd"
                                      d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                                      fill="currentColor"
                                      fill-rule="evenodd"
                                      opacity="0.3"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                      data-testid="add-files"
                      style="padding: 0px; margin-top: 24px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        plusAdd
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="halfWidth"
            >
              <div
                class="group"
                data-rbd-droppable-context-id="1"
                data-rbd-droppable-id="droppableSelect"
              >
                <div
                  class="bp3-form-group"
                  style="flex-grow: 1; margin-bottom: 0px;"
                >
                  <label
                    class="bp3-label"
                    for="valuesPaths"
                  >
                    <div
                      class="formLabel"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="helmHarnessFileStore_valuesPaths"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.manifestType.valuesYamlPath
                        </p>
                      </span>
                      <div
                        class="bp3-popover-wrapper typeSelectorWrapper"
                      >
                        <div
                          class="bp3-popover-target typeSelector"
                        >
                          <button
                            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <span
                                class="bp3-icon StyledProps--main icon fixed"
                                data-icon="fixed-input"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="listFieldsWrapper"
                    >
                      <div
                        aria-describedby="rbd-hidden-text-1-hidden-text-3"
                        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between StyledProps--flex-alignItems-center StyledProps--margin-top-small"
                        data-rbd-drag-handle-context-id="1"
                        data-rbd-drag-handle-draggable-id="0"
                        data-rbd-draggable-context-id="1"
                        data-rbd-draggable-id="0"
                        draggable="false"
                        role="button"
                        tabindex="0"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                          style="align-items: center;"
                        >
                          <span
                            class="bp3-icon bp3-icon-drag-handle-vertical StyledProps--main"
                            icon="drag-handle-vertical"
                          >
                            <svg
                              data-icon="drag-handle-vertical"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                drag-handle-vertical
                              </desc>
                              <path
                                d="M6 9c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4-6c.55 0 1-.45 1-1s-.45-1-1-1-1 .45-1 1 .45 1 1 1zM6 13c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main text"
                          >
                            1.
                          </p>
                          <div
                            class="multiSelectField"
                          >
                            <div
                              class="group"
                            >
                              <div
                                class="bp3-form-group"
                                style="flex-grow: 1; margin-bottom: 0px; margin-top: 0px;"
                              >
                                <label
                                  class="bp3-label"
                                >
                                  <div
                                    class="StyledProps--font StyledProps--main StyledProps--flex"
                                  >
                                    <span
                                      class="Tooltip--acenter"
                                      data-tooltip-id="helmHarnessFileStore_valuesPaths[0]"
                                    >
                                      
                                    </span>
                                  </div>
                                   
                                  <span
                                    class="bp3-text-muted"
                                  />
                                </label>
                                <div
                                  class="bp3-form-content"
                                >
                                  <div
                                    class="StyledProps--font StyledProps--main selectFieldContainer StyledProps--flex"
                                  >
                                    <div
                                      class="fieldWrapper"
                                    >
                                      <div
                                        class="bp3-form-group"
                                        style="width: 100%;"
                                      >
                                        <div
                                          class="bp3-form-content"
                                        >
                                          <div
                                            class="Layout--vertical StyledProps--main"
                                          >
                                            <div
                                              class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                                            >
                                              <p
                                                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-left-xsmall"
                                              >
                                                - 
                                                select
                                                 -
                                              </p>
                                              <div
                                                class="StyledProps--font StyledProps--main StyledProps--padding-right-small"
                                              >
                                                <span
                                                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--margin-right-small StyledProps--margin-left-small"
                                                  icon="chevron-down"
                                                >
                                                  <svg
                                                    data-icon="chevron-down"
                                                    height="16"
                                                    viewBox="0 0 16 16"
                                                    width="16"
                                                  >
                                                    <desc>
                                                      chevron-down
                                                    </desc>
                                                    <path
                                                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                                      fill-rule="evenodd"
                                                    />
                                                  </svg>
                                                </span>
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      class="bp3-popover-wrapper typeSelectorWrapper"
                                    >
                                      <div
                                        class="bp3-popover-target typeSelector"
                                      >
                                        <button
                                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                                          type="button"
                                        >
                                          <span
                                            class="bp3-button-text"
                                          >
                                            <span
                                              class="bp3-icon StyledProps--main icon fixed"
                                              data-icon="fixed-input"
                                            >
                                              <svg
                                                height="12"
                                                viewBox="0 0 9 9"
                                                width="12"
                                                xmlns="http://www.w3.org/2000/svg"
                                              >
                                                <path
                                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                                  fill="currentColor"
                                                />
                                              </svg>
                                            </span>
                                          </span>
                                        </button>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <button
                                class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                                data-testid="remove-valuesPaths-[0]"
                                disabled=""
                                tabindex="-1"
                                type="button"
                              >
                                <span
                                  class="bp3-icon StyledProps--main"
                                  data-icon="main-trash"
                                >
                                  <svg
                                    height="20"
                                    viewBox="0 0 16 20"
                                    width="20"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      clip-rule="evenodd"
                                      d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                                      fill="currentColor"
                                      fill-rule="evenodd"
                                    />
                                    <path
                                      clip-rule="evenodd"
                                      d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                                      fill="currentColor"
                                      fill-rule="evenodd"
                                      opacity="0.3"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                      data-testid="add-valuesPaths"
                      style="padding: 0px; margin-top: 24px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        plusAdd
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Accordion--accordion"
            >
              <div
                class="Accordion--panel"
                data-open="false"
                data-testid="advancedTitle-panel"
                id="advancedTitle-panel"
              >
                <div
                  class="Accordion--summary"
                  data-testid="advancedTitle-summary"
                >
                  <div
                    class="Accordion--label"
                  >
                    advancedTitle
                  </div>
                  <div
                    class="Accordion--chevron"
                  />
                </div>
                <div
                  class="bp3-collapse Accordion--collapse"
                >
                  <div
                    aria-hidden="false"
                    class="bp3-collapse-body"
                    style="transform: translateY(-undefinedpx);"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main saveBtn"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                icon="chevron-left"
              >
                <svg
                  data-icon="chevron-left"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-left
                  </desc>
                  <path
                    d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                back
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                submit
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                icon="chevron-right"
              >
                <svg
                  data-icon="chevron-right"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-right
                  </desc>
                  <path
                    d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Harness File Store with HelmChart Manifest tests when fields are runtime input 1`] = `
<div>
  <div
    class="Layout--vertical Layout--layout-spacing-medium StyledProps--main optionsViewContainer"
    style="height: inherit;"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-h3 StyledProps--margin-bottom-medium"
    >
      Manifest details
    </p>
    <div
      class="OverlaySpinner--overlaySpinner"
    >
      <form
        action="#"
      >
        <div
          class="Layout--vertical StyledProps--main manifestForm StyledProps--flex StyledProps--flex-justifyContent-space-between StyledProps--flex-alignItems-flex-start"
        >
          <div
            class="manifestStepWidth"
          >
            <div
              class="halfWidth"
            >
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="identifier"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="helmHarnessFileStore_identifier"
                  >
                    pipeline.manifestType.manifestIdentifier
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="identifier"
                      placeholder="pipeline.manifestType.manifestPlaceholder"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="halfWidth"
            >
              <div
                class="bp3-form-group"
              >
                <label
                  class="bp3-label"
                  for="helmVersion"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="helmHarnessFileStore_helmVersion"
                  >
                    helmVersion
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-popover-wrapper Select--main bp3-fill"
                  >
                    <div
                      class="bp3-popover-target"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="helmVersion"
                          placeholder="- Select -"
                          style="padding-right: 0px;"
                          type="text"
                          value="Version 2"
                        />
                        <span
                          class="bp3-input-action"
                        >
                          <span
                            class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                            icon="chevron-down"
                          >
                            <svg
                              data-icon="chevron-down"
                              height="14"
                              viewBox="0 0 16 16"
                              width="14"
                            >
                              <desc>
                                chevron-down
                              </desc>
                              <path
                                d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="halfWidth"
            >
              <div
                class="group"
                data-rbd-droppable-context-id="2"
                data-rbd-droppable-id="droppableSelect"
              >
                <div
                  class="bp3-form-group"
                  style="flex-grow: 1; margin-bottom: 0px;"
                >
                  <label
                    class="bp3-label"
                    for="files"
                  >
                    <div
                      class="formLabel"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="helmHarnessFileStore_files"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          fileFolderPathText
                        </p>
                      </span>
                      <div
                        class="bp3-popover-wrapper typeSelectorWrapper"
                      >
                        <div
                          class="bp3-popover-target typeSelector"
                        >
                          <button
                            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <span
                                class="bp3-icon StyledProps--main icon fixed"
                                data-icon="fixed-input"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="listFieldsWrapper"
                    >
                      <div
                        aria-describedby="rbd-hidden-text-2-hidden-text-6"
                        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between StyledProps--flex-alignItems-center StyledProps--margin-top-small"
                        data-rbd-drag-handle-context-id="2"
                        data-rbd-drag-handle-draggable-id="0"
                        data-rbd-draggable-context-id="2"
                        data-rbd-draggable-id="0"
                        draggable="false"
                        role="button"
                        tabindex="0"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                          style="align-items: center;"
                        >
                          <span
                            class="bp3-icon bp3-icon-drag-handle-vertical StyledProps--main"
                            icon="drag-handle-vertical"
                          >
                            <svg
                              data-icon="drag-handle-vertical"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                drag-handle-vertical
                              </desc>
                              <path
                                d="M6 9c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4-6c.55 0 1-.45 1-1s-.45-1-1-1-1 .45-1 1 .45 1 1 1zM6 13c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main text"
                          >
                            1.
                          </p>
                          <div
                            class="multiSelectField"
                          >
                            <div
                              class="group"
                            >
                              <div
                                class="bp3-form-group"
                                style="flex-grow: 1; margin-bottom: 0px; margin-top: 0px;"
                              >
                                <label
                                  class="bp3-label"
                                >
                                  <div
                                    class="StyledProps--font StyledProps--main StyledProps--flex"
                                  >
                                    <span
                                      class="Tooltip--acenter"
                                      data-tooltip-id="helmHarnessFileStore_files[0]"
                                    >
                                      
                                    </span>
                                  </div>
                                   
                                  <span
                                    class="bp3-text-muted"
                                  />
                                </label>
                                <div
                                  class="bp3-form-content"
                                >
                                  <div
                                    class="StyledProps--font StyledProps--main selectFieldContainer StyledProps--flex"
                                  >
                                    <div
                                      class="fieldWrapper"
                                    >
                                      <div
                                        class="bp3-form-group"
                                        style="width: 100%;"
                                      >
                                        <div
                                          class="bp3-form-content"
                                        >
                                          <div
                                            class="Layout--vertical StyledProps--main"
                                          >
                                            <div
                                              class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                                            >
                                              <p
                                                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-left-xsmall"
                                              >
                                                - 
                                                select
                                                 -
                                              </p>
                                              <div
                                                class="StyledProps--font StyledProps--main StyledProps--padding-right-small"
                                              >
                                                <span
                                                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--margin-right-small StyledProps--margin-left-small"
                                                  icon="chevron-down"
                                                >
                                                  <svg
                                                    data-icon="chevron-down"
                                                    height="16"
                                                    viewBox="0 0 16 16"
                                                    width="16"
                                                  >
                                                    <desc>
                                                      chevron-down
                                                    </desc>
                                                    <path
                                                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                                      fill-rule="evenodd"
                                                    />
                                                  </svg>
                                                </span>
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      class="bp3-popover-wrapper typeSelectorWrapper"
                                    >
                                      <div
                                        class="bp3-popover-target typeSelector"
                                      >
                                        <button
                                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                                          type="button"
                                        >
                                          <span
                                            class="bp3-button-text"
                                          >
                                            <span
                                              class="bp3-icon StyledProps--main icon fixed"
                                              data-icon="fixed-input"
                                            >
                                              <svg
                                                height="12"
                                                viewBox="0 0 9 9"
                                                width="12"
                                                xmlns="http://www.w3.org/2000/svg"
                                              >
                                                <path
                                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                                  fill="currentColor"
                                                />
                                              </svg>
                                            </span>
                                          </span>
                                        </button>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <button
                                class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                                data-testid="remove-files-[0]"
                                disabled=""
                                tabindex="-1"
                                type="button"
                              >
                                <span
                                  class="bp3-icon StyledProps--main"
                                  data-icon="main-trash"
                                >
                                  <svg
                                    height="20"
                                    viewBox="0 0 16 20"
                                    width="20"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      clip-rule="evenodd"
                                      d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                                      fill="currentColor"
                                      fill-rule="evenodd"
                                    />
                                    <path
                                      clip-rule="evenodd"
                                      d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                                      fill="currentColor"
                                      fill-rule="evenodd"
                                      opacity="0.3"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                      data-testid="add-files"
                      style="padding: 0px; margin-top: 24px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        plusAdd
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="halfWidth"
            >
              <div
                class="group"
                data-rbd-droppable-context-id="3"
                data-rbd-droppable-id="droppableSelect"
              >
                <div
                  class="bp3-form-group"
                  style="flex-grow: 1; margin-bottom: 0px;"
                >
                  <label
                    class="bp3-label"
                    for="valuesPaths"
                  >
                    <div
                      class="formLabel"
                    >
                      <span
                        class="Tooltip--acenter"
                        data-tooltip-id="helmHarnessFileStore_valuesPaths"
                      >
                        <p
                          class="StyledProps--font StyledProps--main"
                        >
                          pipeline.manifestType.valuesYamlPath
                        </p>
                      </span>
                      <div
                        class="bp3-popover-wrapper typeSelectorWrapper"
                      >
                        <div
                          class="bp3-popover-target typeSelector"
                        >
                          <button
                            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                            type="button"
                          >
                            <span
                              class="bp3-button-text"
                            >
                              <span
                                class="bp3-icon StyledProps--main icon fixed"
                                data-icon="fixed-input"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                            </span>
                          </button>
                        </div>
                      </div>
                    </div>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="listFieldsWrapper"
                    >
                      <div
                        aria-describedby="rbd-hidden-text-3-hidden-text-9"
                        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between StyledProps--flex-alignItems-center StyledProps--margin-top-small"
                        data-rbd-drag-handle-context-id="3"
                        data-rbd-drag-handle-draggable-id="0"
                        data-rbd-draggable-context-id="3"
                        data-rbd-draggable-id="0"
                        draggable="false"
                        role="button"
                        tabindex="0"
                      >
                        <div
                          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main"
                          style="align-items: center;"
                        >
                          <span
                            class="bp3-icon bp3-icon-drag-handle-vertical StyledProps--main"
                            icon="drag-handle-vertical"
                          >
                            <svg
                              data-icon="drag-handle-vertical"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                drag-handle-vertical
                              </desc>
                              <path
                                d="M6 9c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4-6c.55 0 1-.45 1-1s-.45-1-1-1-1 .45-1 1 .45 1 1 1zM6 13c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm4 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0-4c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1zm0 8c-.55 0-1 .45-1 1s.45 1 1 1 1-.45 1-1-.45-1-1-1z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <p
                            class="StyledProps--font StyledProps--main text"
                          >
                            1.
                          </p>
                          <div
                            class="multiSelectField"
                          >
                            <div
                              class="group"
                            >
                              <div
                                class="bp3-form-group"
                                style="flex-grow: 1; margin-bottom: 0px; margin-top: 0px;"
                              >
                                <label
                                  class="bp3-label"
                                >
                                  <div
                                    class="StyledProps--font StyledProps--main StyledProps--flex"
                                  >
                                    <span
                                      class="Tooltip--acenter"
                                      data-tooltip-id="helmHarnessFileStore_valuesPaths[0]"
                                    >
                                      
                                    </span>
                                  </div>
                                   
                                  <span
                                    class="bp3-text-muted"
                                  />
                                </label>
                                <div
                                  class="bp3-form-content"
                                >
                                  <div
                                    class="StyledProps--font StyledProps--main selectFieldContainer StyledProps--flex"
                                  >
                                    <div
                                      class="fieldWrapper"
                                    >
                                      <div
                                        class="bp3-form-group"
                                        style="width: 100%;"
                                      >
                                        <div
                                          class="bp3-form-content"
                                        >
                                          <div
                                            class="Layout--vertical StyledProps--main"
                                          >
                                            <div
                                              class="StyledProps--font StyledProps--main container StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
                                            >
                                              <p
                                                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey500 StyledProps--padding-left-xsmall"
                                              >
                                                - 
                                                select
                                                 -
                                              </p>
                                              <div
                                                class="StyledProps--font StyledProps--main StyledProps--padding-right-small"
                                              >
                                                <span
                                                  class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--margin-right-small StyledProps--margin-left-small"
                                                  icon="chevron-down"
                                                >
                                                  <svg
                                                    data-icon="chevron-down"
                                                    height="16"
                                                    viewBox="0 0 16 16"
                                                    width="16"
                                                  >
                                                    <desc>
                                                      chevron-down
                                                    </desc>
                                                    <path
                                                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                                      fill-rule="evenodd"
                                                    />
                                                  </svg>
                                                </span>
                                              </div>
                                            </div>
                                          </div>
                                        </div>
                                      </div>
                                    </div>
                                    <div
                                      class="bp3-popover-wrapper typeSelectorWrapper"
                                    >
                                      <div
                                        class="bp3-popover-target typeSelector"
                                      >
                                        <button
                                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main btn Button--iconOnly Button--without-shadow"
                                          type="button"
                                        >
                                          <span
                                            class="bp3-button-text"
                                          >
                                            <span
                                              class="bp3-icon StyledProps--main icon fixed"
                                              data-icon="fixed-input"
                                            >
                                              <svg
                                                height="12"
                                                viewBox="0 0 9 9"
                                                width="12"
                                                xmlns="http://www.w3.org/2000/svg"
                                              >
                                                <path
                                                  d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                                  fill="currentColor"
                                                />
                                              </svg>
                                            </span>
                                          </span>
                                        </button>
                                      </div>
                                    </div>
                                  </div>
                                </div>
                              </div>
                              <button
                                class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                                data-testid="remove-valuesPaths-[0]"
                                disabled=""
                                tabindex="-1"
                                type="button"
                              >
                                <span
                                  class="bp3-icon StyledProps--main"
                                  data-icon="main-trash"
                                >
                                  <svg
                                    height="20"
                                    viewBox="0 0 16 20"
                                    width="20"
                                    xmlns="http://www.w3.org/2000/svg"
                                  >
                                    <path
                                      clip-rule="evenodd"
                                      d="M1.143 8.48a1.2 1.2 0 011.189-1.36h10.649a1.2 1.2 0 011.194 1.321l-1.039 10.208a1.2 1.2 0 01-1.193 1.079H3.716a1.2 1.2 0 01-1.189-1.04L1.143 8.48zm11.837-.16H2.332l1.385 10.207h8.226L12.98 8.32zM5.916 1.594a.6.6 0 01.719-.452l4.224.965a.6.6 0 01.452.719L11 4.179l3.86.882a.6.6 0 01-.267 1.17L1.535 3.248a.6.6 0 11.267-1.17l3.805.87.309-1.354zm.86 1.62l3.056.698.175-.768-3.055-.698-.175.768z"
                                      fill="currentColor"
                                      fill-rule="evenodd"
                                    />
                                    <path
                                      clip-rule="evenodd"
                                      d="M8 10.808a.5.5 0 01.5.5v5a.5.5 0 01-1 0v-5a.5.5 0 01.5-.5zm-2.761.012a.5.5 0 01.541.454l.436 4.981a.5.5 0 11-.996.087l-.436-4.98a.5.5 0 01.455-.542zM10.762 10.82a.5.5 0 01.455.541l-.436 4.981a.5.5 0 11-.996-.087l.435-4.98a.5.5 0 01.542-.455z"
                                      fill="currentColor"
                                      fill-rule="evenodd"
                                      opacity="0.3"
                                    />
                                  </svg>
                                </span>
                              </button>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                      data-testid="add-valuesPaths"
                      style="padding: 0px; margin-top: 24px;"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        plusAdd
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Accordion--accordion"
            >
              <div
                class="Accordion--panel"
                data-open="false"
                data-testid="advancedTitle-panel"
                id="advancedTitle-panel"
              >
                <div
                  class="Accordion--summary"
                  data-testid="advancedTitle-summary"
                >
                  <div
                    class="Accordion--label"
                  >
                    advancedTitle
                  </div>
                  <div
                    class="Accordion--chevron"
                  />
                </div>
                <div
                  class="bp3-collapse Accordion--collapse"
                >
                  <div
                    aria-hidden="false"
                    class="bp3-collapse-body"
                    style="transform: translateY(-undefinedpx);"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main saveBtn"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withLeftIcon Button--variation Button--variation-secondary"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                icon="chevron-left"
              >
                <svg
                  data-icon="chevron-left"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-left
                  </desc>
                  <path
                    d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <span
                class="bp3-button-text"
              >
                back
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--withRightIcon Button--variation Button--variation-primary"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                submit
              </span>
              <span
                class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                icon="chevron-right"
              >
                <svg
                  data-icon="chevron-right"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    chevron-right
                  </desc>
                  <path
                    d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;
